--- a/index.css
+++ b/index.css
@@ -1,8 +1,7 @@
-
-
 h1 {
     color:rgb(230, 135, 11);
     font-family: Georgia;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .title_center {
@@ -18,21 +17,29 @@ h1 {
     margin: 0;
     padding: 0; 
     text-align: center;
-  
+    position: absolute;
+    top: 45%;
+    left: 50%;  
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
 }
 
 li {
     display: inline; 
+    padding-right: 11px;
+    font-size: 22px;
+    text-shadow: 1px 1px #000000
 }
 
 a {
     text-decoration:none;
+    
     font-family: calibri;
     color:rgb(212, 114, 1);
 }
 
 a:hover {
-    color:blue;
+    color:rgb(229, 245, 7);
 }
 
 .fade-in {
@@ -71,3 +78,62 @@ a:hover {
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.address {
+  font-family: "Courier New";
+  font-size: 12px;
+  position: absolute;
+  top:55%;
+  left:50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%) 
+}
+
+footer {
+  padding: 20px;
+  text-align: center;
+  font-size: 12px;
+  color: #000000;
+  position: absolute;
+  top:95%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%) 
+}
+
+/*********************Contact Form ************************/
+input[type=text], input[type=email], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.div_form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
