--- a/index.css
+++ b/index.css
@@ -1,16 +1,5 @@
 body {
-  background-color: rgb(255, 255, 255)
-}
-
-img {
-  position: absolute;
-   top: 50%;
-   left: 50%;
-   width: 500px;
-   height: 200px;
-   margin-top: -350px; 
-   margin-left: -255px; 
-   border-radius: 8px;
+  text-align:center;
 }
 
 h1 {
@@ -19,36 +8,37 @@ h1 {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.title_center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%) 
-}
-
 .menu {
     list-style-type: none;
     margin: 0;
     padding: 0; 
-    text-align: center;
-    position: absolute;
-    top: 45%;
-    left: 50%;  
-    margin-right: -50%;
-    transform: translate(-50%, -50%) 
+    display: inline-block;
+}
+
+.address {
+  font-family: "Courier New";
+  font-size: 12px;
 }
 
 li {
-    display: inline; 
-    padding-right: 11px;
-    font-size: 22px;
-    text-shadow: 1px 1px #000000
+  font-size: 22px;
+  text-shadow: 1px 1px #000000;
+  float: left;
+  margin-right: 10px;
+  border-right: 1px solid green;
+  padding-right: 10px;
+  list-style: none;
+}
+
+footer {
+  padding: 20px;
+  text-align: center;
+  font-size: 12px;
+  color: #000000;
 }
 
 a {
     text-decoration:none;
-    
     font-family: calibri;
     color:rgb(212, 114, 1);
 }
@@ -94,27 +84,7 @@ a:hover {
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
-.address {
-  font-family: "Courier New";
-  font-size: 12px;
-  position: absolute;
-  top:55%;
-  left:50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%) 
-}
 
-footer {
-  padding: 20px;
-  text-align: center;
-  font-size: 12px;
-  color: #000000;
-  position: absolute;
-  top:95%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%) 
-}
 
 /*********************Contact Form ************************/
 input[type=text], input[type=email], select {
@@ -151,4 +121,39 @@ input[type=submit] {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+p {
+color: #333;
+font-size: 18px;
+font-family: calibri;
+}
+
+.center {
+  text-align: center;
+  font-size: 24px;
+  font-family: inherit;
+  color: rgb(9, 137, 134);
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: 500;
+  line-height: 1.1;
+  outline:none;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.statements {
+
+  margin: 0;
+  padding: 0; 
+
+
+  color:green;
+}
+
+ul.statements {
+  list-style-type: circle;
 }
